--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>xxx管理系统</h1>
     <br>
-    <a href="/signout" >退出</a>
+    <a href="/logout" >退出</a>
     <br>
     <a href="/syslog">日志管理</a>
     <br>
